# demo_etls

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  azure-pipelines.yml  ruff.toml
docker/: default.dockerfile
scripts/: activate_nearest_venv.sh
tools/prototype/: README.md  cookiecutter.json
tools/prototype/{{ cookiecutter.project_name }}/: .coveragerc  .gitignore  Makefile  README.md  config.yml  docker-compose.yml  pyproject.toml
tools/prototype/{{ cookiecutter.project_name }}/notebooks/: notebook_1_{{ cookiecutter.project_name }}.ipynb
tools/prototype/{{ cookiecutter.project_name }}/scripts/: entrypoint.sh  health_check.py
tools/prototype/{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}/: main.py  models.py  settings.py  tasks.py
tools/prototype/{{ cookiecutter.project_name }}/tests/: test_models.py  test_tasks.py  test_utils.py
tools/prototype/{{ cookiecutter.project_name }}/tests/fixtures/: fixture1.json
